# leSite

./: README.md  extra-styling.css  index.html  post.html
generate-hs/: .gitignore  CHANGELOG.md  generate-hs.cabal  index.html  posts.db
generate-hs/app/: Attempt-Main.bak  Html-generation.hs  HtmlGen.hs  Main.hs  Repository.hs  Structure.hs
generate-hs/test/: Sepc.hs
