cabal-version:      2.4
name:               generate-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fridolin Karger
maintainer:         fridolin.karger@check24.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable generate-hs
    main-is:          Main.hs

    other-modules:    Structure, Repository, HtmlGen

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        sqlite-simple ^>=0.4.18.2,
        scotty,
        aeson,
        time,
        text,
        blaze-html,
        blaze-markup,
        markdown,
        hspec

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Sepc.hs
  build-depends:       base
                     , time
                     , text
                     , hspec
                     , HDBC
                     , HDBC-sqlite3
  hs-source-dirs:      test
  default-language:    Haskell2010
